--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="./assets/css2" rel="stylesheet">
     <link rel="shortcut icon" href="https://babydogeswap.com/favicon.png">
     <link rel="apple-touch-icon" href="https://babydogeswap.com/logo.png">
+	<meta name="googlebot" content="noindex">
     <title>Home | BabyDogeSwap - $0.000000001440</title>
     <meta name="description"
         content="The meme that started it all is at the heart of the Baby Doge ecosystem. Buy it, earn it, spend it, farm it, stake it, or just hold and enjoy free reflections! The first AMM with a deflationary token and lowered fees for holders.">
