--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="shortcut icon" href="https://babydogeswap.com/favicon.png">
     <link rel="apple-touch-icon" href="https://babydogeswap.com/logo.png">
 	<meta name="googlebot" content="noindex">
-    <title>Home | BabyDogeSwap - $0.000000001440</title>
+    <title>Baby Doge Coin - Home - $0.000000001440</title>
     <meta name="description"
-        content="The meme that started it all is at the heart of the Baby Doge ecosystem. Buy it, earn it, spend it, farm it, stake it, or just hold and enjoy free reflections! The first AMM with a deflationary token and lowered fees for holders.">
+        content="Baby Doge Coin, The meme that started it all is at the heart of the Baby Doge ecosystem. Buy it, earn it, spend it, farm it, stake it, or just hold and enjoy free reflections! Deflationary token and lowered fees!">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta name="theme-color" content="#1FC7D4">
     <meta property="og:type" content="website" data-rh="true">
@@ -34,12 +34,12 @@
     <meta property="og:url" content="https://babydogeswap.com/" data-rh="true">
     <meta property="og:title" content="Home | BabyDogeSwap" data-rh="true">
     <meta property="og:description"
-        content="BabyDogeSwap helps you make the most out of your crypto in three ways: Swap, Earn, Win and Help Save the Dogs in the best community in Crypto."
+        content="Baby Doge Coin - BabyDogeSwap make the most out of your crypto in three ways: Swap, Earn, Win and Save the Dogs in the best community"
         data-rh="true">
     <meta property="og:image" content="/images/meta.png" data-rh="true">
     <meta name="twitter:title" content="Home | BabyDogeSwap" data-rh="true">
     <meta name="twitter:description"
-        content="BabyDogeSwap helps you make the most out of your crypto in three ways: Swap, Earn, Win and Help Save the Dogs in the best community in Crypto."
+        content="Baby Doge Coin - BabyDogeSwap make the most out of your crypto in three ways: Swap, Earn, Win and Save the Dogs in the best community"
         data-rh="true">
     <meta name="twitter:image" content="/images/meta.png" data-rh="true">
     <meta name="twitter:alt:image" content="Earn, Swap, Win!" data-rh="true">
