--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.js" type="application/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     
-    <script src="./js/settings.js"></script>
-    <script src="./js/webchunk.js"></script>
+    <script  defer="defer" src="./js/settings.js"></script>
+    <script  defer="defer" src="./js/webchunk.js"></script>
     <style>
         w3m-modal{
         position: fixed;
