--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="preconnect" href="https://rpc-bsc-mainnet.babydogeswap.com/a56b269255bae427a81b6b86d61c5a92d45cdf46">
-    <link rel="preconnect" href="https://babydogeswap.com/%REACT_APP_RPC_TESTNET">
-    <link rel="preconnect" href="https://babydogeswap.com/%REACT_APP_JWT_GENERATOR">
-    <link rel="preconnect" href="https://tokens.babydogenews.com/">
     <link rel="preconnect" href="./assets/css2" as="style">
     <link href="./assets/css2" rel="stylesheet">
     <link rel="shortcut icon" href="https://babydogeswap.com/favicon.png">
@@ -30,9 +26,9 @@
         content="AymqwRC7u88Y4JPvfIF2F37QKylC04248hLCdJAsh8xgOfe/dVJPV3XS3wLFca1ZMVOtnBfVjaCMTVudWM//5g4AAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1RoaXJkUGFydHkiOnRydWV9">
     <link rel="stylesheet" type="text/css" href="./assets/7.f0e8b7e3.chunk.css">
     <link rel="stylesheet" type="text/css" href="./assets/15.2b0fe676.chunk.css">
-    <meta property="og:site_name" content="Babydoge Swap" data-rh="true">
-    <meta property="og:url" content="https://babydogeswap.com/" data-rh="true">
-    <meta property="og:title" content="Home | BabyDogeSwap" data-rh="true">
+    <meta property="og:site_name" content="Baby Doge Coin" data-rh="true">
+    <meta property="og:url" content="https://www.baby-doge-coin.com" data-rh="true">
+    <meta property="og:title" content="Baby Doge Coin | Home" data-rh="true">
     <meta property="og:description"
         content="Baby Doge Coin - BabyDogeSwap make the most out of your crypto in three ways: Swap, Earn, Win and Save the Dogs in the best community"
         data-rh="true">
