--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <link rel="preconnect" href="./assets/css2" as="style">  <link href="./assets/css2" rel="stylesheet">  <link rel="shortcut icon" href="https://babydogeswap.com/favicon.png">  <link rel="apple-touch-icon" href="https://babydogeswap.com/logo.png">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <link rel="preconnect" href="./assets/css2" as="style">  
+<link href="./assets/css2" rel="stylesheet">  
+<link rel="shortcut icon" href="https://babydogeswap.com/favicon.png"> 
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 <meta name="googlebot" content="noindex">
 <title>Baby Doge Coin - Home - $0.000000001248</title>
 <meta name="description" content="Baby Doge Coin, The meme that started it all is at the heart of the Baby Doge ecosystem. Buy it, earn it, spend it, farm it, stake it, or just hold it!">
