--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <link rel="preconnect" href="./assets/css2" as="style">  
 <link href="./assets/css2" rel="stylesheet">  
-<link rel="shortcut icon" href="https://babydogeswap.com/favicon.png"> 
+<link rel="shortcut icon" href="https://www.baby-doge-coin.com/favicon.ico"> 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
