--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <link rel="preconnect" href="./assets/css2" as="style">  
 <link href="./assets/css2" rel="stylesheet">  
-<link rel="shortcut icon" href="https://www.baby-doge-coin.com/favicon.ico"> 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 <link rel="manifest" href="/site.webmanifest">
 <meta name="googlebot" content="noindex">
 <title>Baby Doge Coin - Home - $0.000000001248</title>
