--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <script async data-id="101429117" src="//static.getclicky.com/js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <link rel="preconnect" href="./assets/css2" as="style">  
 <link href="./assets/css2" rel="stylesheet">  
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
